--- a/css/styles.css
+++ b/css/styles.css
@@ -2,27 +2,29 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-family: "Lobster", cursive;
 }
 
 h2 {
-  color: #3046C5;
+  color: #3046c5;
 }
 
 header h2 {
-  color: #CEC8FF;
+  color: #cec8ff;
 }
 
 footer {
-  background-image: linear-gradient(#CEC8FF, white);
+  background-image: linear-gradient(#cec8ff, white);
   padding: 20px 0;
 }
 
 .jumbotron {
   margin: 0;
   padding: 30px;
-  background-image: linear-gradient(to right, #5637DD, #3046C5, #60106B);
+  background-image: linear-gradient(to right, #5637dd, #3046c5, #60106b);
   color: white;
 }
 
@@ -33,10 +35,16 @@ footer {
 }
 
 .navbar {
-  background-color: #901CAD;
+  background-color: #901cad;
 }
 
-.site-footer{
-  background-image: linear-gradient(#CEC8FF, white);
+.site-footer {
+  background-image: linear-gradient(#cec8ff, white);
   padding: 20px 0;
+}
+
+.tab-content {
+  border: 1px solid #ddd;
+  border-top: none;
+  padding: 10px;
 }
