--- a/css/styles.css
+++ b/css/styles.css
@@ -43,8 +43,8 @@ footer {
   padding: 20px 0;
 }
 
-.tab-content {
-  border: 1px solid #ddd;
-  border-top: none;
-  padding: 10px;
+a,
+a:hover {
+  color: inherit;
+  text-decoration: none;
 }
