--- a/css/styles.css
+++ b/css/styles.css
@@ -50,3 +50,10 @@ footer {
 .carousel {
   border: solid #5637dd;
 }
+
+#carouselButton {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+}
