--- a/css/styles.css
+++ b/css/styles.css
@@ -28,14 +28,21 @@ header h2 {
   color: white;
 }
 
-.navbar {
-  background-color: #901cad;
-}
-
 .row-content {
   padding: 50px 0;
   border-bottom: 1px ridge;
   min-height: 200px;
+}
+
+#carouselButton {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+}
+
+.navbar {
+  background-color: #901cad;
 }
 
 .carousel {
