--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -46,6 +46,19 @@ header {
   color: white;
 }
 
+.row-content {
+  padding: 50px 0;
+  border-bottom: 1px ridge;
+  min-height: 200px;
+}
+
+#carouselButton {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  z-index: 100;
+}
+
 .navbar {
   background-color: $color-mid;
 }
